--- a/backend/data/fitnotes.yaml
+++ b/backend/data/fitnotes.yaml
@@ -16,33 +16,10 @@ notes:
   - name: Optimal SCS Nestor
     description: >
       This fit requires the RA-705 Implant & EM-805 Implant
-  - name: Optimal SCS Kronos
+  - name: Optimal SCS Kronos HYBRID
     description: >
       This fit requires the amulet mid grade or high grade Implant.
-  - name: Optimal SCS Paladin
+  - name: Optimal SCS Paladin HYBRID
     description: >
-      Implant Required: EM-806
-  - name: TDF_GUARD_HQ_ELITE
-    description: >
-      Implant Required: EM-806
-  - name: TDF_DAMNATION
-    description: >
-      This ship has very high EHP, its used as a meatshield (tank).
-  - name: TDF_EOS
-    description: >
-      Typically used by the active FC as primary booster with no starter level skills. Can be used as a meatshield/secondary booster by anyone while you are working on becoming trainee FC.
-  - name: TDF_NESTOR_HQ_ELITE_ASCENDANCY
-    description: >
-      Implant Required: EM-806. You are required to be approved logi (Logistics Specialist) to fly this ship.
-  - name: TDF_NESTOR_HQ_ELITE_HYBRID
-    description: >
-      Implant Required: EM-806. You are required to be approved logi (Logistics Specialist) to fly this ship.
-  - name: TDF_KRONOS_ELITE
-    description: >
-      Requires warp speed implant set to be eligible for elite badge
-  - name: TDF_PALLY_ELITE
-    description: >
-      Requires warp speed implant set to be eligible for elite badge
-  - name: TDF_VINDI_ELITE
-    description: >
-      Requires warp speed implant set to be eligible for elite badge
+      This fit requires the amulet mid grade or high grade Implant.
+  
