[fix] guard logi lvl 4 [fix] guides

--- a/backend/data/skills.yaml
+++ b/backend/data/skills.yaml
@@ -602,7 +602,8 @@ requirements:
     Fuel Conservation:
       min: 4
     Logistics Cruisers:
-      min: 5
+      min: 4
+      gold: 5
     Radar Sensor Compensation:
       elite: 4
     Amarr Cruiser:
