--- a/backend/data/skills.yaml
+++ b/backend/data/skills.yaml
@@ -694,3 +694,17 @@ requirements:
       elite: 4
     Long Distance Jamming:
       elite: 4
+  Ishtar:
+    <<: [*generic]
+    Gallente Drone Specialization: 
+      gold: 5
+    Heavy Assault Cruisers:
+      min: 3
+      elite: 4
+      gold: 5
+    Gallente Cruiser:
+      min: 5
+    Heavy Drone Operation:
+      min: 4
+      elite: 5
+    
