--- a/backend/data/skills.yaml
+++ b/backend/data/skills.yaml
@@ -707,4 +707,14 @@ requirements:
     Heavy Drone Operation:
       min: 4
       elite: 5
-    
+  Dominix:
+    <<: [*generic]
+    Gallente Drone Specialization: 
+      gold: 5
+    Gallente Battleship:
+      min: 3
+      elite: 4
+      gold: 5
+    Heavy Drone Operation:
+      min: 4
+      elite: 5
