[add] domi/ishtar in skill tab

--- a/backend/data/skills.yaml
+++ b/backend/data/skills.yaml
@@ -93,6 +93,7 @@ categories:
     - Logistics Cruisers
     - Marauders
     - Command Ships
+    - Heavy Assault Cruisers
   Fleet Support:
     - Leadership
     - Wing Command
