[fix] skill plan

--- a/backend/data/skillplan.yaml
+++ b/backend/data/skillplan.yaml
@@ -1,7 +1,7 @@
 plans:
   - name: VINDICATOR BASIC PATH
     description: >
-      This skill plan will train you from starter Megathron in to the basic Vindi fit, this will get you out of starter queue.
+      This skill plan will train you from starter Megathron in to the basic Vindi fit.
     plan:
       - type: tank
         from: starter
@@ -19,335 +19,3 @@ plans:
       - type: fit
         hull: Vindicator
         fit: Standard SCS Vindicator
-
-  - name: NIGHTMARE BASIC PATH
-    description: >
-      This skill plan will train you from starter Megathron in to the basic Nightmare fit, this will get you out of starter queue.
-    plan:
-      - type: tank
-        from: starter
-      - type: fit
-        hull: Megathron
-        fit: Starter SCS Megathron
-      - type: fit
-        hull: Nightmare
-        fit: Starter SCS Nightmare
-      - type: tank
-        from: min
-      - type: skills
-        from: Nightmare
-        tier: min
-      - type: fit
-        hull: Nightmare
-        fit: Standard SCS Nightmare
-
-  - name: VINDICATOR ELITE PATH
-    description: >
-      This skill plan will train you from starter Megathron through to the elite Vindi fits.
-    plan:
-      - type: tank
-        from: starter
-      - type: fit
-        hull: Megathron
-        fit: Starter SCS Megathron
-      - type: fit
-        hull: Vindicator
-        fit: Starter SCS Vindicator
-      - type: tank
-        from: min
-      - type: skills
-        from: Vindicator
-        tier: min
-      - type: fit
-        hull: Vindicator
-        fit: Standard SCS Vindicator
-      - type: skill
-        from: Cybernetics
-        level: 5
-      - type: fit
-        hull: Vindicator
-        fit: Optimal SCS Vindicator HYBRID
-      - type: skills
-        from: Vindicator
-        tier: elite
-
-  - name: KRONOS ELITE PATH
-    description: >
-      This skill plan will train you from starter Megathron through to the Vindicator and finally onto elite Kronos fits.
-    plan:
-      - type: tank
-        from: starter
-      - type: fit
-        hull: Megathron
-        fit: Starter SCS Megathron
-      - type: fit
-        hull: Vindicator
-        fit: Starter SCS Vindicator
-      - type: tank
-        from: min
-      - type: skills
-        from: Vindicator
-        tier: min
-      - type: fit
-        hull: Vindicator
-        fit: Standard SCS Vindicator
-      - type: skills
-        from: Kronos
-        tier: min
-      - type: fit
-        hull: Kronos
-        fit: Standard SCS Kronos
-      - type: skill
-        from: Cybernetics
-        level: 5
-      - type: fit
-        hull: Kronos
-        fit: Optimal SCS Vindicator HYBRID
-      - type: skills
-        from: Kronos
-        tier: elite
-
-  - name: PALADIN ELITE PATH
-    description: >
-      This skill plan will train you from starter Megathron through to the Nightmare and finally onto the elite Paladin fits.
-    plan:
-      - type: tank
-        from: starter
-      - type: fit
-        hull: Megathron
-        fit: Starter SCS Megathron
-      - type: fit
-        hull: Nightmare
-        fit: Starter SCS Nightmare
-      - type: tank
-        from: min
-      - type: skills
-        from: Nightmare
-        tier: min
-      - type: fit
-        hull: Nightmare
-        fit: Standard SCS Nightmare
-      - type: skills
-        from: Paladin
-        tier: min
-      - type: fit
-        hull: Paladin
-        fit: Standard SCS Paladin
-      - type: skill
-        from: Cybernetics
-        level: 5
-      - type: fit
-        hull: Paladin
-        fit: Optimal SCS Paladin HYBRID
-      - type: skills
-        from: Paladin
-        tier: elite
-
-  - name: VINDICATOR ELITE
-    description: >
-      This skill plan trains the requirements to allow you to fly any elite Vindicator fit.
-    plan:
-      - type: tank
-        from: min
-      - type: skill
-        from: Cybernetics
-        level: 5
-      - type: skills
-        from: Vindicator
-        tier: min
-      - type: fit
-        hull: Vindicator
-        fit: Optimal SCS Vindicator HYBRID
-      - type: skills
-        from: Vindicator
-        tier: elite
-
-  - name: KRONOS ELITE
-    description: >
-      This skill plan trains the requirements to allow you to fly any elite Kronos fit.
-    plan:
-      - type: tank
-        from: min
-      - type: skill
-        from: Cybernetics
-        level: 5
-      - type: skills
-        from: Kronos
-        tier: min
-      - type: fit
-        hull: Kronos
-        fit: Optimal SCS Vindicator HYBRID
-      - type: skills
-        from: Kronos
-        tier: elite
-
-  - name: PALADIN ELITE
-    description: >
-      This skill plan trains the requirements to allow you to fly any elite Paladin fit.
-    plan:
-      - type: tank
-        from: min
-      - type: skill
-        from: Cybernetics
-        level: 5
-      - type: skills
-        from: Paladin
-        tier: min
-      - type: fit
-        hull: Paladin
-        fit: Optimal SCS Paladin HYBRID
-      - type: skills
-        from: Paladin
-        tier: elite
-
-  - name: ONEIROS BASIC
-    description: >
-      This skill plan trains you into the Oneiros basic fit. Use this to get started in Oni.
-    plan:
-      - type: tank
-        from: min
-      - type: skills
-        from: Oneiros
-        tier: min
-      - type: fit
-        hull: Oneiros
-        fit: TDF_ONI_HQ_BASIC
-
-  - name: GUARDIAN BASIC
-    description: >
-      This skill plan trains you into the Guardian basic fit. Use this to get started in Guardian.
-    plan:
-      - type: tank
-        from: min
-      - type: skill
-        from: Cybernetics
-        level: 5
-      - type: skills
-        from: Guardian
-        tier: min
-      - type: fit
-        hull: Guardian
-        fit: Standard SCS Guardian
-
-  - name: NESTOR ELITE
-    description: >
-      This skill plan trains you into elite Nestor.
-    plan:
-      - type: tank
-        from: min
-      - type: skill
-        from: Cybernetics
-        level: 5
-      - type: skills
-        from: Nestor
-        tier: min
-      - type: fit
-        hull: Nestor
-        fit: Optimal SCS Nestor
-      - type: skills
-        from: Nestor
-        tier: elite
-
-  - name: EOS ELITE
-    description: >
-      TDF's primary booster. Elite level skills.
-    plan:
-      - type: tank
-        from: min
-      - type: skill
-        from: Cybernetics
-        level: 5
-      - type: skills
-        from: Eos
-        tier: min
-      - type: fit
-        hull: Eos
-        fit: Standard SCS Eos Other
-      - type: skills
-        from: Eos
-        tier: elite
-
-  - name: DAMNATION ELITE
-    description: >
-      TDF's secondary booster. Elite level skills.
-    plan:
-      - type: tank
-        from: min
-      - type: skill
-        from: Cybernetics
-        level: 5
-      - type: skills
-        from: Damnation
-        tier: min
-      - type: fit
-        hull: Damnation
-        fit: Standard SCS Damnation Other
-      - type: skills
-        from: Damnation
-        tier: elite
-
-  - name: EVERYTHING GOLD
-    description: >
-      Train the entire TDF doctrine, including boosters! Not really a serious skill plan. Trains everything to Elite Gold level.
-    plan:
-      - type: tank
-        from: min
-      - type: skill
-        from: Cybernetics
-        level: 5
-      - type: fit
-        hull: Vindicator
-        fit: Optimal SCS Vindicator HYBRID
-      - type: fit
-        hull: Vindicator
-        fit: Optimal SCS Vindicator HYBRID
-      - type: fit
-        hull: Kronos
-        fit: Optimal SCS Vindicator HYBRID
-      - type: fit
-        hull: Paladin
-        fit: Optimal SCS Paladin HYBRID
-      - type: fit
-        hull: Nestor
-        fit: Optimal SCS Nestor
-
-      - type: skills
-        from: Vindicator
-        tier: gold
-      - type: skills
-        from: Kronos
-        tier: gold
-      - type: skills
-        from: Paladin
-        tier: gold
-      - type: skills
-        from: Nightmare
-        tier: elite
-      - type: skills
-        from: Oneiros
-        tier: gold
-      - type: skills
-        from: Guardian
-        tier: gold
-      - type: skills
-        from: Nestor
-        tier: gold
-
-      - type: fit
-        hull: Eos
-        fit: Standard SCS Eos Other
-      - type: fit
-        hull: Damnation
-        fit: Standard SCS Damnation Other
-      - type: skills
-        from: Eos
-        tier: elite
-      - type: skills
-        from: Damnation
-        tier: elite
-      - type: skills
-        from: Eos
-        tier: gold
-      - type: skills
-        from: Damnation
-        tier: gold
