--- a/backend/data/skillplan.yaml
+++ b/backend/data/skillplan.yaml
@@ -1,8 +1,84 @@
 plans:
+  - name: MEGATRON BASIC PATH
+    description: >
+      This skill plan will train you to starter Megathron
+    plan:
+      - type: skills
+        from: Megatron
+        tier: min
+      - type: skills
+        from: Megatron
+        tier: elite
   - name: VINDICATOR BASIC PATH
     description: >
       This skill plan will train you from starter Megathron in to the basic Vindi fit.
     plan:
       - type: skills
+        from: Megatron
+        tier: min
+      - type: skills
         from: Vindicator
         tier: min
+      - type: skills
+        from: Vindicator
+        tier: elite
+  - name: KRONOS BASIC PATH
+    description: >
+      This skill plan will train you to standard Kronos
+    plan:
+      - type: skills
+        from: Kronos
+        tier: min
+      - type: skills
+        from: Kronos
+        tier: elite
+  - name: PALADIN BASIC PATH
+    description: >
+      This skill plan will train you to standard Paladin
+    plan:
+      - type: skills
+        from: Paladin
+        tier: min
+      - type: skills
+        from: Paladin
+        tier: elite
+  - name: NIGHTMARE BASIC PATH
+    description: >
+      This skill plan will train you to standard Nightmare
+    plan:
+      - type: skills
+        from: Nightmare
+        tier: min
+      - type: skills
+        from: Nightmare
+        tier: elite
+  - name: GUARDIAN BASIC PATH
+    description: >
+      This skill plan will train you to standard Guardian
+    plan:
+      - type: skills
+        from: Guardian
+        tier: min
+      - type: skills
+        from: Guardian
+        tier: elite
+  - name: NESTOR BASIC PATH
+    description: >
+      This skill plan will train you to standard Nestor
+    plan:
+      - type: skills
+        from: Nestor
+        tier: min
+      - type: skills
+        from: Nestor
+        tier: elite
+  - name: ISHTAR BASIC PATH
+    description: >
+      This skill plan will train you to standard Ishtar
+    plan:
+      - type: skills
+        from: Ishtar
+        tier: min
+      - type: skills
+        from: Ishtar
+        tier: elite
