--- a/backend/data/skillplan.yaml
+++ b/backend/data/skillplan.yaml
@@ -5,7 +5,7 @@ plans:
     plan:
       - type: skills
         from: Megatron
-        tier: elite
+        tier: min
   - name: VINDICATOR BASIC PATH
     description: >
       This skill plan will train you from starter Megathron in to the basic Vindi fit.
@@ -15,4 +15,46 @@ plans:
         tier: min
       - type: skills
         from: Vindicator
-        tier: elite
+        tier: min
+  - name: KRONOS BASIC PATH
+    description: >
+      This skill plan will train you to standard Kronos
+    plan:
+      - type: skills
+        from: Kronos
+        tier: min
+  - name: PALADIN BASIC PATH
+    description: >
+      This skill plan will train you to standard Paladin
+    plan:
+      - type: skills
+        from: Paladin
+        tier: min
+  - name: NIGHTMARE BASIC PATH
+    description: >
+      This skill plan will train you to standard Nightmare
+    plan:
+      - type: skills
+        from: Nightmare
+        tier: min
+  - name: GUARDIAN BASIC PATH
+    description: >
+      This skill plan will train you to standard Guardian
+    plan:
+      - type: skills
+        from: Guardian
+        tier: min
+  - name: NESTOR BASIC PATH
+    description: >
+      This skill plan will train you to standard Nestor
+    plan:
+      - type: skills
+        from: Nestor
+        tier: min
+  - name: ISHTAR BASIC PATH
+    description: >
+      This skill plan will train you to standard Ishtar
+    plan:
+      - type: skills
+        from: Ishtar
+        tier: min
