--- a/backend/data/skillplan.yaml
+++ b/backend/data/skillplan.yaml
@@ -6,3 +6,45 @@ plans:
       - type: skills
         from: Vindicator
         tier: min
+  - name: KRONOS BASIC PATH
+    description: >
+      This skill plan will train you to standard Kronos
+    plan:
+      - type: skills
+        from: Kronos
+        tier: min
+  - name: PALADIN BASIC PATH
+    description: >
+      This skill plan will train you to standard Paladin
+    plan:
+      - type: skills
+        from: Paladin
+        tier: min
+  - name: NIGHTMARE BASIC PATH
+    description: >
+      This skill plan will train you to standard Nightmare
+    plan:
+      - type: skills
+        from: Nightmare
+        tier: min
+  - name: GUARDIAN BASIC PATH
+    description: >
+      This skill plan will train you to standard Guardian
+    plan:
+      - type: skills
+        from: Guardian
+        tier: min
+  - name: NESTOR BASIC PATH
+    description: >
+      This skill plan will train you to standard Nestor
+    plan:
+      - type: skills
+        from: Nestor
+        tier: min
+  - name: ISHTAR BASIC PATH
+    description: >
+      This skill plan will train you to standard Ishtar
+    plan:
+      - type: skills
+        from: Ishtar
+        tier: min
