--- a/backend/data/skillplan.yaml
+++ b/backend/data/skillplan.yaml
@@ -6,6 +6,9 @@ plans:
       - type: skills
         from: Vindicator
         tier: min
+      - type: skills
+        from: Vindicator
+        tier: elite
   - name: KRONOS BASIC PATH
     description: >
       This skill plan will train you to standard Kronos
@@ -13,6 +16,9 @@ plans:
       - type: skills
         from: Kronos
         tier: min
+      - type: skills
+        from: Kronos
+        tier: elite
   - name: PALADIN BASIC PATH
     description: >
       This skill plan will train you to standard Paladin
@@ -20,6 +26,9 @@ plans:
       - type: skills
         from: Paladin
         tier: min
+      - type: skills
+        from: Paladin
+        tier: elite
   - name: NIGHTMARE BASIC PATH
     description: >
       This skill plan will train you to standard Nightmare
@@ -27,6 +36,9 @@ plans:
       - type: skills
         from: Nightmare
         tier: min
+      - type: skills
+        from: Nightmare
+        tier: elite
   - name: GUARDIAN BASIC PATH
     description: >
       This skill plan will train you to standard Guardian
@@ -34,6 +46,9 @@ plans:
       - type: skills
         from: Guardian
         tier: min
+      - type: skills
+        from: Guardian
+        tier: elite
   - name: NESTOR BASIC PATH
     description: >
       This skill plan will train you to standard Nestor
@@ -41,6 +56,9 @@ plans:
       - type: skills
         from: Nestor
         tier: min
+      - type: skills
+        from: Nestor
+        tier: elite
   - name: ISHTAR BASIC PATH
     description: >
       This skill plan will train you to standard Ishtar
@@ -48,3 +66,6 @@ plans:
       - type: skills
         from: Ishtar
         tier: min
+      - type: skills
+        from: Ishtar
+        tier: elite
