--- a/backend/data/skillplan.yaml
+++ b/backend/data/skillplan.yaml
@@ -6,9 +6,6 @@ plans:
       - type: skills
         from: Vindicator
         tier: min
-      - type: skills
-        from: Vindicator
-        tier: elite
   - name: KRONOS BASIC PATH
     description: >
       This skill plan will train you to standard Kronos
@@ -16,9 +13,6 @@ plans:
       - type: skills
         from: Kronos
         tier: min
-      - type: skills
-        from: Kronos
-        tier: elite
   - name: PALADIN BASIC PATH
     description: >
       This skill plan will train you to standard Paladin
@@ -26,9 +20,6 @@ plans:
       - type: skills
         from: Paladin
         tier: min
-      - type: skills
-        from: Paladin
-        tier: elite
   - name: NIGHTMARE BASIC PATH
     description: >
       This skill plan will train you to standard Nightmare
@@ -36,9 +27,6 @@ plans:
       - type: skills
         from: Nightmare
         tier: min
-      - type: skills
-        from: Nightmare
-        tier: elite
   - name: GUARDIAN BASIC PATH
     description: >
       This skill plan will train you to standard Guardian
@@ -46,9 +34,6 @@ plans:
       - type: skills
         from: Guardian
         tier: min
-      - type: skills
-        from: Guardian
-        tier: elite
   - name: NESTOR BASIC PATH
     description: >
       This skill plan will train you to standard Nestor
@@ -56,9 +41,6 @@ plans:
       - type: skills
         from: Nestor
         tier: min
-      - type: skills
-        from: Nestor
-        tier: elite
   - name: ISHTAR BASIC PATH
     description: >
       This skill plan will train you to standard Ishtar
@@ -66,6 +48,52 @@ plans:
       - type: skills
         from: Ishtar
         tier: min
+  - name: VINDICATOR ELITE PATH
+    description: >
+      This skill plan will train you from starter Megathron in to the basic Vindi fit.
+    plan:
+      - type: skills
+        from: Vindicator
+        tier: elite
+  - name: KRONOS ELITE PATH
+    description: >
+      This skill plan will train you to standard Kronos
+    plan:
+      - type: skills
+        from: Kronos
+        tier: elite
+  - name: PALADIN ELITE PATH
+    description: >
+      This skill plan will train you to standard Paladin
+    plan:
+      - type: skills
+        from: Paladin
+        tier: elite
+  - name: NIGHTMARE ELITE PATH
+    description: >
+      This skill plan will train you to standard Nightmare
+    plan:
+      - type: skills
+        from: Nightmare
+        tier: elite
+  - name: GUARDIAN ELITE PATH
+    description: >
+      This skill plan will train you to standard Guardian
+    plan:
+      - type: skills
+        from: Guardian
+        tier: elite
+  - name: NESTOR ELITE PATH
+    description: >
+      This skill plan will train you to standard Nestor
+    plan:
+      - type: skills
+        from: Nestor
+        tier: elite
+  - name: ISHTAR ELITE PATH
+    description: >
+      This skill plan will train you to standard Ishtar
+    plan:
       - type: skills
         from: Ishtar
         tier: elite
