[add] skill plan

--- a/backend/data/skillplan.yaml
+++ b/backend/data/skillplan.yaml
@@ -1,42 +1,49 @@
 plans:
+  - name: MEGATHRON BASIC PATH
+    description: >
+      This skill plan will train you to Megathron fit.
+    plan:
+      - type: skills
+        from: Megathron
+        tier: min
   - name: VINDICATOR BASIC PATH
     description: >
-      This skill plan will train you from starter Megathron in to the basic Vindi fit.
+      This skill plan will train you to the basic Vindi fit.
     plan:
       - type: skills
         from: Vindicator
         tier: min
   - name: KRONOS BASIC PATH
     description: >
-      This skill plan will train you to standard Kronos
+      This skill plan will train you to standard Kronos.
     plan:
       - type: skills
         from: Kronos
         tier: min
   - name: PALADIN BASIC PATH
     description: >
-      This skill plan will train you to standard Paladin
+      This skill plan will train you to standard Paladin.
     plan:
       - type: skills
         from: Paladin
         tier: min
   - name: NIGHTMARE BASIC PATH
     description: >
-      This skill plan will train you to standard Nightmare
+      This skill plan will train you to standard Nightmare.
     plan:
       - type: skills
         from: Nightmare
         tier: min
   - name: GUARDIAN BASIC PATH
     description: >
-      This skill plan will train you to standard Guardian
+      This skill plan will train you to standard Guardian.
     plan:
       - type: skills
         from: Guardian
         tier: min
   - name: NESTOR BASIC PATH
     description: >
-      This skill plan will train you to standard Nestor
+      This skill plan will train you to standard Nestor.
     plan:
       - type: skills
         from: Nestor
@@ -48,51 +55,58 @@ plans:
       - type: skills
         from: Ishtar
         tier: min
+  - name: MEGATHRON ELITE PATH
+    description: >
+      This skill plan will train you to Megathron fit with elite skill level.
+    plan:
+      - type: skills
+        from: Megathron
+        tier: elite
   - name: VINDICATOR ELITE PATH
     description: >
-      This skill plan will train to the basic Vindi fit with elite skill level
+      This skill plan will train to the basic Vindi fit with elite skill level.
     plan:
       - type: skills
         from: Vindicator
         tier: elite
   - name: KRONOS ELITE PATH
     description: >
-      This skill plan will train you to standard Kronos with elite skill level
+      This skill plan will train you to standard Kronos with elite skill level.
     plan:
       - type: skills
         from: Kronos
         tier: elite
   - name: PALADIN ELITE PATH
     description: >
-      This skill plan will train you to standard Paladin with elite skill level
+      This skill plan will train you to standard Paladin with elite skill level.
     plan:
       - type: skills
         from: Paladin
         tier: elite
   - name: NIGHTMARE ELITE PATH
     description: >
-      This skill plan will train you to standard Nightmare with elite skill level
+      This skill plan will train you to standard Nightmare with elite skill level.
     plan:
       - type: skills
         from: Nightmare
         tier: elite
   - name: GUARDIAN ELITE PATH
     description: >
-      This skill plan will train you to standard Guardian with elite skill level
+      This skill plan will train you to standard Guardian with elite skill level.
     plan:
       - type: skills
         from: Guardian
         tier: elite
   - name: NESTOR ELITE PATH
     description: >
-      This skill plan will train you to standard Nestor with elite skill level
+      This skill plan will train you to standard Nestor with elite skill level.
     plan:
       - type: skills
         from: Nestor
         tier: elite
   - name: ISHTAR ELITE PATH
     description: >
-      This skill plan will train you to standard Ishtar with elite skill level
+      This skill plan will train you to standard Ishtar with elite skill level.
     plan:
       - type: skills
         from: Ishtar
