--- a/backend/data/fitnotes.yaml
+++ b/backend/data/fitnotes.yaml
@@ -24,7 +24,7 @@ notes:
       This fit requires the amulet mid grade or high grade Implant.
   - name: Alt Rattlesnake Other
     description: >
-      This fit is only for alt of poeple with good marauder or optimal fit.
+      This fit is only for alt of people with good marauder or optimal fit.
   - name: Multibox Loki Other
     description: >
       This fit is only for multibox specialist
