--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,31 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-brands-svg-icons": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "buffer": "^6.0.3",
-    "chart.js": "^4.4.0",
+    "chart.js": "^3.5.1",
     "lodash": "^4.17.21",
-    "react": "^18.2.0",
-    "react-awesome-styled-grid": "^3.1.4",
-    "react-chartjs-2": "^5.2.0",
-    "react-data-table-component": "^7.5.4",
-    "react-dom": "^18.2.0",
-    "react-markdown": "^9.0.1",
+    "react": "^17.0.2",
+    "react-awesome-styled-grid": "^3.1.2",
+    "react-chartjs-2": "^3.0.4",
+    "react-data-table-component": "^7.5.2",
+    "react-dom": "^17.0.2",
+    "react-markdown": "^7.0.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
-    "remark-gfm": "^4.0.0",
-    "styled-components": "^6.1.1",
+    "remark-gfm": "^2.0.0",
+    "styled-components": "^5.3.1",
     "varint": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "eslint": "^8.53.0",
+    "eslint": "^8.29.0",
     "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-react": "^7.33.2",
-    "prettier": "^3.1.0"
+    "eslint-plugin-react": "^7.25.1",
+    "prettier": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,9 +44,7 @@
       "react/prop-types": "off",
       "react/react-in-jsx-scope": "off",
       "react/jsx-uses-react": "off",
-      "jsx-a11y/anchor-is-valid": "off",
-      "no-unused-vars": "warn",
-      "no-mixed-spaces-and-tabs": "warn"
+      "jsx-a11y/anchor-is-valid": "off"
     }
   },
   "browserslist": {
