Revert "update docker file"
This reverts commit b5fecdf5ec1cd6d45c78a57dcc978f6c6ebaf01b.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,9 +2,7 @@ FROM node:18.14.1 AS build
 WORKDIR /app/frontend
 ADD package.json package-lock.json /app/frontend/
 RUN npm i
-# ADD archive-frontend.tar /app/frontend
-COPY src /app/frontend
-COPY public/ /app/frontend
+ADD archive-frontend.tar /app/frontend
 RUN npm run build
 
 FROM nginx:alpine
