--- a/backend/data/skills.yaml
+++ b/backend/data/skills.yaml
@@ -119,20 +119,16 @@ categories:
 requirements:
   _generic: &generic # Generic skills: everyone needs these
     EM Armor Compensation:
-      min: 2
-      elite: 4
+      min: 4
       gold: 5
     Explosive Armor Compensation:
-      min: 2
-      elite: 4
+      min: 4
       gold: 5
     Thermal Armor Compensation:
-      min: 2
-      elite: 4
+      min: 4
       gold: 5
     Kinetic Armor Compensation:
-      min: 2
-      elite: 4
+      min: 4
       gold: 5
     Armor Layering:
       min: 3
@@ -519,6 +515,7 @@ requirements:
     Marauders:
       min: 3
       elite: 4
+      gold: 5
       priority: 10
     Capacitor Emission Systems:
       min: 3
@@ -536,9 +533,6 @@ requirements:
       min: 3
       elite: 4
     Light Drone Operation:
-      min: 3
-      elite: 5
-    Medium Drone Operation:
       min: 3
       elite: 5
     Repair Drone Operation:
